[tool.poetry]
name = "cars"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.7"
elasticsearch-dsl = "6.4.0"
graphene = "2.1.8"
graphene-django = "2.2.0"
psycopg2-binary = "2.8.4"
toolz = "0.10.0"

[tool.poetry.dev-dependencies]
black = {version = "19.3-beta.0",allows-prereleases = true}
django-extensions = "2.2.5"
ipython = "7.9.0"
pdbpp = "0.10.2"
ptpython = "2.0.6"
pywatchman = {version = "1.4.1",platform = "linux"}

[tool.black]
line-length = 100
target-version = ["py37"]

exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
